unpackaged/main/default/objects/teeehehehehe__c/teeehehehehe__c.object-meta.xml
<CustomObject>
    <label>teeehehehehe</label>
    <nameField>
        <label>teeehehehehe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tehehehehes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>