unpackaged/main/default/objects/teeehehehehe__c/fields/baddaaaabbbaaaa__c.field-meta.xml
<CustomField>
    <fullName>baddaaaabbbaaaa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>baddaaaabbbaaaa</label>
    <type>Checkbox</type>
</CustomField>