unpackaged/main/default/objects/teeehehehehe__c/fields/fgdfg__c.field-meta.xml
<CustomField>
    <fullName>fgdfg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fgdfg</label>
    <type>Checkbox</type>
</CustomField>