unpackaged/main/default/objects/teeehehehehe__c/fields/woooahhh__c.field-meta.xml
<CustomField>
    <fullName>woooahhh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>woooahhh</label>
    <type>Checkbox</type>
</CustomField>